messing around with buttons, project p alignment needs fixing

--- a/source/assets/stylesheets/components/_button.scss
+++ b/source/assets/stylesheets/components/_button.scss
@@ -1,11 +1,11 @@
 .btn {
   box-sizing: border-box;
-  width: 200px;
+  width: 290px;
   background: #13042D;
   color: #FFFFFF !important;
   border: 1px solid #FFFFFF !important;
   border-radius: 91px !important;
-
+  background: none;
   font-family: JetBrains Mono;
   font-size: 20px;
   font-weight: 800;
